// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingOverlay /> should handle "fill" prop 1`] = `
<LoadingOverlay
  fill={true}
>
  <div
    className="loading-overlay fill"
  >
    <Spinner>
      <div>
        <svg
          className="spinner size-medium"
          height={48}
          viewBox="0 0 48 48"
          width={48}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="circle stroke__brand-blue"
            cx={24}
            cy={24}
            r={23}
          />
        </svg>
      </div>
    </Spinner>
  </div>
</LoadingOverlay>
`;

exports[`<LoadingOverlay /> should handle props 1`] = `
<LoadingOverlay
  className="test-class"
  spinnerProps={
    Object {
      "size": "small",
    }
  }
  style={
    Object {
      "borderRadius": 12,
    }
  }
>
  <div
    className="loading-overlay fill test-class"
    style={
      Object {
        "borderRadius": 12,
      }
    }
  >
    <Spinner
      size="small"
    >
      <div>
        <svg
          className="spinner size-small"
          height={20}
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="circle stroke__brand-blue"
            cx={10}
            cy={10}
            r={9}
          />
        </svg>
      </div>
    </Spinner>
  </div>
</LoadingOverlay>
`;

exports[`<LoadingOverlay /> should renders without props 1`] = `
<LoadingOverlay>
  <div
    className="loading-overlay fill"
  >
    <Spinner>
      <div>
        <svg
          className="spinner size-medium"
          height={48}
          viewBox="0 0 48 48"
          width={48}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            className="circle stroke__brand-blue"
            cx={24}
            cy={24}
            r={23}
          />
        </svg>
      </div>
    </Spinner>
  </div>
</LoadingOverlay>
`;
